# django-model2puml

./: .gitignore  LICENSE  README.rst  manage.py  setup.cfg
django2puml/: asgi.py  settings.py  urls.py  wsgi.py
puml_generator/: apps.py
puml_generator/management/commands/: generate_puml.py
puml_generator/management/commands/utils/: utils.py
