[metadata]
name = django-model2puml
version = 0.1.9
description = A Django app to generate PlantUML diagram of project models.
long_description = file: README.rst
url = https://github.com/sen-den/django-model2puml
author = Denis Senchishen
author_email = dsenchishen@icloud.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
